Use gray images.

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>net.imagej</groupId>
+            <artifactId>ij</artifactId>
+            <version>1.52g</version>
+        </dependency>
     </dependencies>
 
 
