--- a/commenter/pom.xml
+++ b/commenter/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ris58h.goleador.commenter</groupId>
-    <artifactId>youtube-goleador-commenter</artifactId>
+    <artifactId>goleador-commenter</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
