--- a/worker/pom.xml
+++ b/worker/pom.xml
@@ -19,6 +19,17 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+
         <!-- Processor dependencies -->
         <dependency>
             <groupId>net.imagej</groupId>
