--- a/commenter/pom.xml
+++ b/commenter/pom.xml
@@ -41,6 +41,12 @@
             <version>v3-rev205-1.25.0</version>
         </dependency>
         <dependency>
+            <groupId>net.jodah</groupId>
+            <artifactId>failsafe</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>${junit.jupiter.version}</version>
