--- a/main/pom.xml
+++ b/main/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>failsafe</artifactId>
             <version>1.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.5.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
