--- a/worker/pom.xml
+++ b/worker/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>amqp-client</artifactId>
             <version>5.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>net.jodah</groupId>
+            <artifactId>failsafe</artifactId>
+            <version>1.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
